# gate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PULL_REQUEST.md  README.md  WINDOWS_BUILD.md  WINDOWS_SETUP_GUIDE.md  WINDOWS_TESTING_CHECKLIST.md  flake.nix  result  rust-toolchain.toml  test-tls.sh  test_windows_compatibility.sh
crates/chat-ui/: Cargo.toml  README.md
crates/chat-ui/examples/trunk-demo/: .gitignore  Cargo.toml  README.md  Trunk.cassette.toml  Trunk.toml  cassette.html  cassette_demo.rs  index.html  main.rs  tailwind.config.js
crates/chat-ui/src/: lib.rs  styles.rs
crates/chat-ui/src/components/: chat_container.rs  chat_input.rs  message.rs  message_list.rs  mod.rs  streaming_indicator.rs  streaming_text.rs
crates/chat-ui/src/parsers/: anthropic.rs  google.rs  mod.rs  openai.rs  streaming.rs
crates/chat-ui/src/types/: mod.rs  multimodal.rs
crates/chat-ui/src/utils/: cassette_loader.rs  cassette_parser.rs  flexible_parser.rs  markdown.rs  mod.rs  simple_cassette_parser.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  logging.rs  main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: auth.rs  bootstrap.rs  context.rs  crypto.rs  error.rs  errors.rs  identity.rs  inference.rs  lib.rs  plugins.rs  prelude.rs  state.rs  task.rs  tracing.rs  types.rs  validation.rs  webauthn.rs
crates/core/src/access/: identity.rs  mod.rs  permissions.rs  policies.rs
crates/core/src/bootstrap/: mod.rs  parser.rs
crates/core/src/tests/: context.rs  state.rs
crates/core/src/tracing/: config.rs  correlation.rs  file_rotation.rs  init.rs  metrics.rs  mod.rs  prelude.rs  prometheus.rs  trace_context.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: bootstrap.rs  certs.rs  config.rs  context.rs  daemon.rs  error.rs  http.rs  jwt_secret.rs  letsencrypt.rs  lib.rs  main.rs  minimal_state.rs  permissions.rs  selfsigned.rs  server.rs  service.rs  state.rs  state_dir.rs  test_iroh.rs  tls.rs  tls_bridge.rs  tls_reload.rs  types.rs  upstream.rs
crates/daemon/src/daemon/: actor.rs  builder.rs  inner.rs  mod.rs  rpc.rs
crates/daemon/src/routes/: admin.rs  auth.rs  config.rs  mod.rs
crates/daemon/src/runtime/: builder.rs  helpers.rs  inner.rs  mod.rs
crates/daemon/src/services/: auth.rs  inference.rs  mod.rs  monitoring.rs  p2p.rs  tls.rs  tlsforward.rs  webauthn.rs
crates/daemon/tests/: integration_test.rs  user_management_test.rs
crates/frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  page.html  tailwind.config.js
crates/frontend-common/: Cargo.toml
crates/frontend-common/src/: client.rs  client_wrapper.rs  config.rs  lib.rs
crates/frontend-common/src/auth/: auth_component.rs  component.rs  context.rs  error_handler.rs  error_messages.rs  mod.rs
crates/frontend-common/src/components/: bootstrap_prompt.rs  live_chat.rs  mod.rs  reauth_modal.rs  spinner.rs  theme_toggle.rs
crates/frontend-common/src/hooks/: mod.rs  use_webauthn.rs
crates/frontend-common/src/services/: api_wrapper.rs  auth.rs  bootstrap.rs  inference.rs  mod.rs  webauthn_browser.rs
crates/frontend-common/src/theme/: context.rs  provider.rs
crates/frontend-daemon/: Cargo.toml  Trunk.toml  index.html  style.css  tailwind.config.js
crates/frontend-daemon/src/: lib.rs  local_app.rs  local_auth.rs  main.rs  onboarding.rs  utils.rs
crates/frontend-daemon/src/components/: config_editor.rs  mod.rs  user_management.rs
crates/frontend-daemon/src/services/: config.rs  mod.rs  user.rs
crates/frontend-relay/: Cargo.toml
crates/frontend-relay/src/: app.rs  lib.rs  main.rs
crates/frontend-relay/src/components/: mod.rs  nodes_list.rs
crates/frontend-tauri/: .gitignore  Cargo.toml  Trunk.toml  style.css  tailwind.config.js
crates/frontend-tauri/src/: app.rs  lib.rs  main.rs  tauri_api.rs
crates/frontend-tauri/src/components/: daemon_status.rs  mod.rs
crates/frontend/src/: app.rs  auth_guard.rs  auth_utils.rs  client.rs  local_app.rs  local_auth.rs  main.rs
crates/frontend/src/auth/: auth_component.rs  context.rs  error_messages.rs  mod.rs
crates/frontend/src/components/: chat_demo.rs  config_editor.rs  live_chat.rs  mod.rs  theme_toggle.rs
crates/frontend/src/hooks/: mod.rs  use_auth_callback.rs  use_webauthn.rs
crates/frontend/src/services/: auth.rs  config.rs  inference.rs  mod.rs  webauthn_browser.rs
crates/frontend/src/theme/: context.rs  mod.rs  provider.rs
crates/gui/: Cargo.toml  README.md  build.rs  entitlements.plist  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/icons/: convert_icon.py  icon.icns
crates/gui/src/: commands.rs  daemon.rs  lib.rs  main.rs  state.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: dispatcher.rs  error.rs  forwarding.rs  lib.rs  model_detection.rs  server.rs  state.rs  types.rs
crates/http/src/client/: auth.rs  auth_typed.rs  config.rs  error.rs  inference.rs  inference_typed.rs  mod.rs  typed.rs
crates/http/src/config/: auth.rs  mod.rs
crates/http/src/middleware/: auth.rs  correlation.rs  metrics.rs  mod.rs  rbac.rs  trace.rs  webauthn.rs  webauthn_auth_provider.rs
crates/http/tests/: client_tests.rs  rbac_test.rs  trace_propagation_test.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: error.rs  inference.rs  lib.rs  node.rs  protocol.rs  protocols.rs  request.rs  router.rs  session.rs  sni_proxy.rs  stream.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: convert.rs  lib.rs
crates/relay/: Cargo.toml  README.md
crates/relay/src/: cert_store.rs  cloudflare.rs  cloudflare_dns.rs  config.rs  dns.rs  error.rs  https_proxy.rs  lib.rs  registry.rs  relay.rs  service.rs  sni.rs  stream.rs  tls_proxy.rs
crates/sqlx/: Cargo.toml  README.md
crates/sqlx/migrations/: 0001_initial_schema.sql  0002_webauthn_schema.sql  0003_add_user_roles.sql  0003_permissions_schema.sql  0004_user_status.sql
crates/sqlx/src/: base.rs  common.rs  lib.rs  postgres.rs  sqlite.rs  webauthn.rs
crates/tlsforward/: Cargo.toml  README.md
crates/tlsforward/src/: lib.rs
(+123 files in other folders)
