[workspace]
members = [
    "crates/core",
    "crates/p2p",
    "crates/daemon",
    "crates/cli",
    "crates/relay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI <team@hellas.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hellas-ai/gate"
keywords = ["p2p", "llm", "inference", "encryption", "gateway"]
categories = ["network-programming", "cryptography"]

[workspace.dependencies]
# Core dependencies used across crates
iroh = "0.35.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hex = "0.4"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow similar names in tests where ping/pong, etc. make sense
similar_names = { level = "allow", priority = 1 }
