[workspace]
members = [
    "crates/core",
    "crates/proto",
    "crates/daemon",
    "crates/cli",
    "crates/relay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hellas AI <team@hellas.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hellas-ai/gate"
keywords = ["p2p", "llm", "inference", "encryption", "gateway"]
categories = ["network-programming", "cryptography"]

[workspace.dependencies]
# Core dependencies used across crates
iroh = { version = "0.35", default-features = false, features = ["discovery-local-network"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
hex = "0.4"
dashmap = "6.1"

# Protobuf dependencies
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# Common utilities
config = "0.14"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"

# HTTP/TLS (standardize on latest versions)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "1.0"

# Build/dev tools
rcgen = "0.13"

# External transport
tonic-iroh-transport = { version = "0.0" }
tonic = "0.13"
tonic-build = "0.13"

# Local workspace crates
hellas-gate-core = { path = "crates/core" }
hellas-gate-proto = { path = "crates/proto" }
hellas-gate-daemon = { path = "crates/daemon" }
hellas-gate-relay = { path = "crates/relay" }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# Allow similar names in tests where ping/pong, etc. make sense
similar_names = { level = "allow", priority = 1 }
