[package]
name = "gate-chat-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64.workspace = true
gloo-timers = "0.3"
js-sys = "0.3"
# Use workspace dependencies where available
serde = { workspace = true }
serde_json = { workspace = true }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", 
    "HtmlElement", 
    "Element", 
    "DomRect", 
    "CssStyleDeclaration", 
    "HtmlTextAreaElement", 
    "KeyboardEvent",
    "File",
    "FileList", 
    "FileReader",
    "HtmlInputElement",
    "Event",
    "ProgressEvent",
    "Blob"
] }

# Frontend dependencies (matching gate-frontend versions)
yew = { version = "0.21", features = ["csr"] }

[dev-dependencies]
tokio-test = "0.4"
wasm-bindgen-test = "0.3"

[[example]]
name = "trunk-demo"
path = "examples/trunk-demo/main.rs"
