[package]
name = "gate-chat-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64.workspace = true
gloo-timers = { workspace = true }
js-sys = { workspace = true }
# Use workspace dependencies where available
serde = { workspace = true }
serde_json = { workspace = true }

wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "console", 
    "HtmlElement", 
    "Element", 
    "DomRect", 
    "CssStyleDeclaration", 
    "HtmlTextAreaElement", 
    "KeyboardEvent",
    "File",
    "FileList", 
    "FileReader",
    "HtmlInputElement",
    "Event",
    "ProgressEvent",
    "Blob",
    "HtmlSelectElement",
    "DomTokenList"
] }

# Frontend dependencies (matching gate-frontend-daemon versions)
yew = { workspace = true, features = ["csr"] }

[dev-dependencies]
tokio-test = "0.4"
wasm-bindgen-test = { workspace = true }
gloo-net = { workspace = true, features = ["http"] }
console_error_panic_hook = { workspace = true }

[[example]]
name = "trunk-demo"
path = "examples/trunk-demo/main.rs"
