[package]
name = "gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Gate CLI for P2P AI inference network"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
hellas-gate-core = { workspace = true }
hellas-gate-daemon = { workspace = true }
hellas-gate-relay = { workspace = true }
hellas-gate-proto = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
iroh = { workspace = true }
rustls = { workspace = true }

# CLI dependencies
clap = { version = "4.0", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5.0"
hex = { workspace = true }

# Configuration management
config = { workspace = true }


[features]
default = []
