[package]
name = "hellas-gate-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Gate daemon for P2P AI inference network"

[dependencies]
hellas-gate-core = { workspace = true }
hellas-gate-proto = { workspace = true }
hellas-gate-relay = { workspace = true }
tonic-iroh-transport = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
config = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
instant-acme = { git = "https://github.com/djc/instant-acme.git" }
futures.workspace = true
time = "0.3"
sha2 = "0.10"
hex = { workspace = true }
base64 = "0.22"
n0-watcher = "*"

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
