[package]
name = "gate-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
otlp = ["gate-core/tracing-otlp"]

[lib]
name = "gate_daemon"
path = "src/lib.rs"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["tokio", "http1"] }

# Configuration
chrono.workspace = true
clap.workspace = true
config.workspace = true
directories.workspace = true
dotenvy = "0.15"
gate-core = { workspace = true, features = ["tracing", "tracing-otlp", "tracing-prometheus"] }
gate-http = { workspace = true, features = ["server"] }
gate-p2p.workspace = true
gate-tlsforward = { workspace = true, features = ["client"] }
gate-sqlx.workspace = true
hex = "0.4"
hyper-util = { workspace = true, default-features = false }
iroh.workspace = true
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26"
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true

futures.workspace = true
uuid.workspace = true
catgrad-llm = { git = "https://github.com/hellas-ai/catgrad", branch = "grw/fix/remove-logging-init"}

[dev-dependencies]
futures = "0.3"
rcgen = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tempfile = "3"
