[package]
name = "gate-frontend-common"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Common frontend components and utilities for Gate"

[dependencies]
base64 = "0.22"
gate-chat-ui = { path = "../chat-ui" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = [
    "console",
    "Credential",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions", 
    "PublicKeyCredentialRequestOptions",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialUserEntity",
    "PublicKeyCredentialParameters",
    "PublicKeyCredentialDescriptor",
    "AuthenticatorResponse",
    "AuthenticatorAttestationResponse",
    "AuthenticatorAssertionResponse",
    "AuthenticatorSelectionCriteria",
    "Window",
    "HtmlSelectElement",
    "HtmlInputElement",
    "Event",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "Storage"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = { version = "0.11", features = ["storage", "utils"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gate-http = { path = "../http", default-features = false, features = ["client"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
wasm-logger = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"