[package]
name = "gate-frontend-common"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Common frontend components and utilities for Gate"

[dependencies]
base64 = "0.22"
gate-chat-ui = { path = "../chat-ui" }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Credential",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions", 
    "PublicKeyCredentialRequestOptions",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialUserEntity",
    "PublicKeyCredentialParameters",
    "PublicKeyCredentialDescriptor",
    "AuthenticatorResponse",
    "AuthenticatorAttestationResponse",
    "AuthenticatorAssertionResponse",
    "AuthenticatorSelectionCriteria",
    "Window",
    "HtmlSelectElement",
    "HtmlInputElement",
    "Event",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "Storage"
] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
gloo = { workspace = true, features = ["storage", "utils"] }
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gate-http = { path = "../http", default-features = false, features = ["client"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = { workspace = true }
wasm-logger = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }