[package]
name = "gate-frontend-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Daemon web UI frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
gate-chat-ui = { path = "../chat-ui" }
gloo = { version = "0.11", features = ["timers"] }
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"