[package]
name = "gate-frontend-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Daemon web UI frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
gate-chat-ui = { path = "../chat-ui" }
gloo = { workspace = true, features = ["timers"] }
wasm-logger = { workspace = true }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
web-sys = { workspace = true, features = ["HtmlTextAreaElement"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }