[package]
name = "gate-frontend-relay"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Relay web UI frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
gloo-timers = "0.3"
gloo-net = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"