[package]
name = "gate-frontend-relay"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Relay web UI frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = { workspace = true }
gloo-timers = { workspace = true }
gloo-net = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }