[package]
name = "gate-frontend-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Tauri desktop app frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
gate-chat-ui = { path = "../chat-ui" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["Navigator", "Clipboard", "Window", "Document", "Element", "HtmlElement", "Location", "MediaQueryList", "MediaQueryListEvent"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
wasm-logger = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
gloo-timers = "0.3"
gloo-utils = "0.2"
gloo-events = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
