[package]
name = "gate-frontend-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Hellas AI"]
license = "AGPL-3.0"
description = "Tauri desktop app frontend for Gate"

[dependencies]
gate-frontend-common = { path = "../frontend-common" }
gate-chat-ui = { path = "../chat-ui" }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }
web-sys = { workspace = true, features = ["Navigator", "Clipboard", "Window", "Document", "Element", "HtmlElement", "Location", "MediaQueryList", "MediaQueryListEvent"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
wasm-logger = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
gloo-events = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
