[package]
name = "gate-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tauri = { version = "2", features = ["tray-icon", "rustls-tls"] }
tauri-plugin-opener = "2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
gate-daemon = { path = "../daemon" }
gate-core = { workspace = true }
gate-http = { workspace = true }
gate-sqlx = { workspace = true }
gate-p2p = { path = "../p2p" }
gate-tlsforward = { path = "../tlsforward" }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = "0.4"
rand = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
